fix: add spacing between nav menu and github icon

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,7 @@
 @import './rspress.css';
 @import './normalize.css';
 
-:root{
+:root {
   --rp-home-hero-name-color: #222;
   --rp-c-text-2: #333;
 }
@@ -13,4 +13,10 @@
 
 .button_72e53.brand_72e53 {
   background: #2272eb;
+}
+
+.container_457e8 {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
 }
